--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "server": "json-server --watch src/jobs.json --port 8000"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "framer-motion": "^12.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "react-spinners": "^0.13.8",
-    "react-toastify": "^10.0.4"
+    "react-toastify": "^10.0.4",
+    "styled-components": "^6.1.17"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
