--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "json-server --watch src/jobs.json --port 8000"
+    "server": "json-server --watch src/Campaigns.json --port 8000"
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
